<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:gravity="center_vertical|left">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView android:text="@string/cardHolderName" style="@style/inputLabel" />
            <EditText style="@style/textInput" android:singleLine="true" android:layout_width="fill_parent"
                android:id="@+id/cardHolderNameInput" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView android:text="@string/cardNumber" style="@style/inputLabel" />
            <EditText style="@style/textInput" android:singleLine="true" android:layout_width="fill_parent"
                android:id="@+id/cardNumberInput" android:numeric="integer" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView android:text="@string/expirationDate" style="@style/inputLabel"
                android:paddingRight="40sp" />
            <TextView android:text="@string/expirationMonth" style="@style/inputLabel" />
            <EditText style="@style/textInput" android:singleLine="true"
                android:layout_width="50sp" android:id="@+id/expirationMonthInput"
                android:numeric="integer" />
            <TextView android:text="@string/expirationYear" style="@style/inputLabel"
                android:paddingLeft="10sp" />
            <EditText style="@style/textInput" android:singleLine="true"
                android:layout_width="50sp" android:id="@+id/expirationYearInput"
                android:numeric="integer" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView android:text="@string/cvv" style="@style/inputLabel" />
            <EditText style="@style/textInput" android:singleLine="true" android:layout_width="fill_parent"
                android:id="@+id/cvvInput" android:numeric="integer" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView android:text="@string/amount" style="@style/inputLabel" />
            <EditText style="@style/textInput" android:singleLine="true" android:layout_width="fill_parent"
                android:id="@+id/amountInput" android:numeric="integer|decimal" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:gravity="center_horizontal">
            <Button android:text="@string/submit" android:clickable="true"
                android:id="@+id/submitAction"
                android:onClick="showbill"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>